--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>gaffer</groupId>
+        <groupId>uk.gov.gchq.gaffer</groupId>
         <artifactId>gaffer2</artifactId>
-        <version>0.4.6</version>
+        <version>0.4.8-SNAPSHOT</version>
     </parent>
 
     <artifactId>gaffer-experimental</artifactId>
-    <version>0.4.7-SNAPSHOT</version>
+    <version>0.4.8-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -33,7 +33,7 @@
     </modules>
 
     <properties>
-        <gaffer.version>0.4.6</gaffer.version>
+        <gaffer.version>0.4.8-SNAPSHOT</gaffer.version>
         <scm.url>
             https://github.com/gchq/gaffer-experimental
         </scm.url>
