--- a/tinkerpop/src/test/resources/gafferpop-tinkerpop-modern.properties
+++ b/tinkerpop/src/test/resources/gafferpop-tinkerpop-modern.properties
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-gremlin.graph=gaffer.gafferpop.GafferPopGraph
+gremlin.graph=uk.gov.gchq.gaffer.gafferpop.GafferPopGraph
 gaffer.storeproperties=conf/gafferpop/gaffer/store.properties
 gaffer.schemas=conf/gafferpop/gaffer/schema/dataSchema.json,conf/gafferpop/gaffer/schema/dataTypes.json
 gaffer.userId=user01
