--- a/pom.xml
+++ b/pom.xml
@@ -21,19 +21,20 @@
     <parent>
         <groupId>uk.gov.gchq.gaffer</groupId>
         <artifactId>gaffer2</artifactId>
-        <version>0.6.1-SNAPSHOT</version>
+        <version>0.6.1</version>
     </parent>
 
     <artifactId>gaffer-experimental</artifactId>
-    <version>0.6.1-SNAPSHOT</version>
+    <version>0.6.1</version>
     <packaging>pom</packaging>
 
     <modules>
         <module>tinkerpop</module>
+        <module>gaffer-gatling</module>
     </modules>
 
     <properties>
-        <gaffer.version>0.6.1-SNAPSHOT</gaffer.version>
+        <gaffer.version>0.6.1</gaffer.version>
         <scm.url>
             https://github.com/gchq/gaffer-experimental
         </scm.url>
