--- a/performance-testing/pom.xml
+++ b/performance-testing/pom.xml
@@ -14,6 +14,7 @@
         <module>performance-testing-generators</module>
         <module>performance-testing-rest</module>
         <module>performance-testing-demo</module>
+        <module>performance-testing-example-hadoop</module>
     </modules>
 
     <dependencies>
