--- a/tinkerpop/src/test/resources/gaffer/store.properties
+++ b/tinkerpop/src/test/resources/gaffer/store.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2016 Crown Copyright
+# Copyright 2016-2017 Crown Copyright
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,8 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-gaffer.store.class=gaffer.accumulostore.SingleUseMockAccumuloStore
-gaffer.store.properties.class=gaffer.accumulostore.AccumuloProperties
+gaffer.store.class=uk.gov.gchq.gaffer.accumulostore.SingleUseMockAccumuloStore
+gaffer.store.properties.class=uk.gov.gchq.gaffer.accumulostore.AccumuloProperties
 accumulo.instance=someInstanceName
 accumulo.zookeepers=aZookeeper
 accumulo.table=table1
