--- a/tinkerpop/src/test/resources/gafferpop-tinkerpop-modern.properties
+++ b/tinkerpop/src/test/resources/gafferpop-tinkerpop-modern.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2016 Crown Copyright
+# Copyright 2016-2017 Crown Copyright
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,7 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-gremlin.graph=gaffer.gafferpop.GafferPopGraph
+gremlin.graph=uk.gov.gchq.gaffer.gafferpop.GafferPopGraph
 gaffer.storeproperties=conf/gafferpop/gaffer/store.properties
 gaffer.schemas=conf/gafferpop/gaffer/schema/dataSchema.json,conf/gafferpop/gaffer/schema/dataTypes.json
 gaffer.userId=user01
