gh-11 - Added random edge generation example to performance-testing module.

--- a/performance-testing/pom.xml
+++ b/performance-testing/pom.xml
@@ -15,6 +15,7 @@
         <module>performance-testing-rest</module>
         <module>performance-testing-demo</module>
         <module>performance-testing-example-hadoop</module>
+        <module>performance-testing-random</module>
     </modules>
 
     <dependencies>
