Fixed bug with json provider and added hyper log log plus to entity in schema

--- a/example/example-rest/pom.xml
+++ b/example/example-rest/pom.xml
@@ -36,6 +36,12 @@
             <version>${project.parent.version}</version>
             <classifier>classes</classifier>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>${servlet-api.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <finalName>${project.artifactId}-${project.version}</finalName>
