--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     </parent>
 
     <artifactId>gaffer-experimental</artifactId>
-    <version>0.7.2-SNAPSHOT</version>
+    <version>0.7.3</version>
     <packaging>pom</packaging>
 
     <modules>
