Updated to gaffer 0.7.8

--- a/tinkerpop/src/test/resources/gafferpop-tinkerpop-modern.properties
+++ b/tinkerpop/src/test/resources/gafferpop-tinkerpop-modern.properties
@@ -14,6 +14,7 @@
 # limitations under the License.
 #
 gremlin.graph=uk.gov.gchq.gaffer.gafferpop.GafferPopGraph
+gaffer.graphId=graph1
 gaffer.storeproperties=conf/gafferpop/gaffer/store.properties
-gaffer.schemas=conf/gafferpop/gaffer/schema/dataSchema.json,conf/gafferpop/gaffer/schema/dataTypes.json
+gaffer.schemas=conf/gafferpop/gaffer/schema/elements.json,conf/gafferpop/gaffer/schema/types.json
 gaffer.userId=user01
