Added federated rest

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     <modules>
         <module>tinkerpop</module>
         <module>graffer-ql</module>
+        <module>federated-rest</module>
     </modules>
 
     <properties>
