--- a/tinkerpop/pom.xml
+++ b/tinkerpop/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>uk.gov.gchq.gaffer</groupId>
         <artifactId>gaffer-experimental</artifactId>
-        <version>0.7.9-SNAPSHOT</version>
+        <version>1.5.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>tinkerpop</artifactId>
 
     <properties>
         <java.version>1.8</java.version>
-        <gremlin.version>3.2.0-incubating</gremlin.version>
+        <gremlin.version>3.3.3</gremlin.version>
     </properties>
 
     <dependencies>
