--- a/pom.xml
+++ b/pom.xml
@@ -21,20 +21,21 @@
     <parent>
         <groupId>uk.gov.gchq.gaffer</groupId>
         <artifactId>gaffer2</artifactId>
-        <version>1.5.2</version>
+        <version>1.12.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>gaffer-experimental</artifactId>
-    <version>1.5.2-SNAPSHOT</version>
+    <version>1.12.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
         <module>tinkerpop</module>
         <module>graffer-ql</module>
+        <module>operation-runner</module>
     </modules>
 
     <properties>
-        <gaffer.version>1.5.2</gaffer.version>
+        <gaffer.version>1.12.1-SNAPSHOT</gaffer.version>
         <scm.url>
             https://github.com/gchq/gaffer-experimental
         </scm.url>
