--- a/operation-runner/pom.xml
+++ b/operation-runner/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>gaffer-experimental</artifactId>
         <groupId>uk.gov.gchq.gaffer</groupId>
-        <version>1.12.1-SNAPSHOT</version>
+        <version>1.13.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
