--- a/pom.xml
+++ b/pom.xml
@@ -21,11 +21,11 @@
     <parent>
         <groupId>uk.gov.gchq.gaffer</groupId>
         <artifactId>gaffer2</artifactId>
-        <version>1.12.1-SNAPSHOT</version>
+        <version>1.13.0</version>
     </parent>
 
     <artifactId>gaffer-experimental</artifactId>
-    <version>1.12.1-SNAPSHOT</version>
+    <version>1.13.0</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -35,7 +35,7 @@
     </modules>
 
     <properties>
-        <gaffer.version>1.12.1-SNAPSHOT</gaffer.version>
+        <gaffer.version>1.13.0</gaffer.version>
         <scm.url>
             https://github.com/gchq/gaffer-experimental
         </scm.url>
