--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <module>tinkerpop</module>
         <module>graffer-ql</module>
         <module>operation-runner</module>
+        <module>gaffer-controller</module>
     </modules>
 
     <properties>
