--- a/gaffer-controller/deploy/helm/templates/controller/rbac/graph-teardown-role.yaml
+++ b/gaffer-controller/deploy/helm/templates/controller/rbac/graph-teardown-role.yaml
@@ -13,7 +13,11 @@
 # limitations under the License.
 
 apiVersion: rbac.authorization.k8s.io/v1
+{{ if eq (index .Values.controller.applicationProperties "controller.scope") "NAMESPACE" }}
+kind: Role
+{{ else }}
 kind: ClusterRole
+{{- end }}
 metadata:
   name: {{ template "gaffer-controller.fullname" . }}-graph-teardown
   labels:
@@ -29,3 +33,27 @@ rules:
   - secrets
   verbs: 
   - deletecollection
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+{{ if eq (index .Values.controller.applicationProperties "controller.scope") "NAMESPACE" }}
+kind: RoleBinding
+{{ else }}
+kind: ClusterRoleBinding
+{{- end }}
+metadata:
+  name: {{ template "gaffer-controller.fullname" . }}-graph-teardown
+  labels:
+    {{ include "gaffer-controller.labels" . | nindent 4 }}
+subjects:
+  - kind: ServiceAccount
+    name: {{ .Values.controller.serviceAccount.name }}
+    namespace: {{ .Release.Namespace }}
+roleRef:
+  {{ if eq (index .Values.controller.applicationProperties "controller.scope") "NAMESPACE" }}
+  kind: Role
+  {{ else }}
+  kind: ClusterRole
+  {{- end }}
+  name: {{ template "gaffer-controller.fullname" . }}-graph-teardown
+  apiGroup: rbac.authorization.k8s.io
