--- a/gaffer-controller/pom.xml
+++ b/gaffer-controller/pom.xml
@@ -13,7 +13,7 @@
   <artifactId>gaffer-controller</artifactId>
 
   <properties>
-    <kubernetes.version>10.0.0</kubernetes.version>
+    <kubernetes.version>11.0.0</kubernetes.version>
     <slf4j.api.version>1.7.25</slf4j.api.version>
     <apache.commons.text.version>1.9</apache.commons.text.version>
     <!-- Testing versions -->
@@ -93,6 +93,7 @@
         <configuration>
           <layout>ZIP</layout>
           <executable>true</executable>
+          <classifier>exec</classifier>
         </configuration>
         <executions>
           <execution>
