Initial testing successful

--- a/gaffer-controller/deploy/helm/values.yaml
+++ b/gaffer-controller/deploy/helm/values.yaml
@@ -14,7 +14,7 @@
 
 controller:
   applicationProperties:
-    controller.scope: NAMESPACE
+    controller.scope.cluster: false
   serviceAccount:
     create: true
     name: gaffer-controller
