--- a/gaffer-controller/deploy/helm/templates/controller/rbac/watch-role.yaml
+++ b/gaffer-controller/deploy/helm/templates/controller/rbac/watch-role.yaml
@@ -13,10 +13,10 @@
 # limitations under the License.
 
 apiVersion: rbac.authorization.k8s.io/v1
-{{ if eq (index .Values.controller.applicationProperties "controller.scope") "NAMESPACE" }}
-kind: Role
-{{ else }}
+{{ if (index .Values.controller.applicationProperties "controller.scope.cluster") }}
 kind: ClusterRole
+{{ else }}
+kind: Role
 {{- end }}
 metadata:
   name: {{ template "gaffer-controller.fullname" . }}-watch
@@ -55,10 +55,10 @@ rules:
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-{{ if eq (index .Values.controller.applicationProperties "controller.scope") "NAMESPACE" }}
-kind: RoleBinding
-{{ else }}
+{{ if (index .Values.controller.applicationProperties "controller.scope.cluster") }}
 kind: ClusterRoleBinding
+{{ else }}
+kind: RoleBinding
 {{- end }}
 metadata:
   name: {{ template "gaffer-controller.fullname" . }}-watch
@@ -69,10 +69,10 @@ subjects:
     name: {{ .Values.controller.serviceAccount.name }}
     namespace: {{ .Release.Namespace }}
 roleRef:
-  {{ if eq (index .Values.controller.applicationProperties "controller.scope") "NAMESPACE" }}
-  kind: Role
-  {{ else }}
+  {{ if (index .Values.controller.applicationProperties "controller.scope.cluster") }}
   kind: ClusterRole
+  {{ else }}
+  kind: Role
   {{- end }}
   name: {{ template "gaffer-controller.fullname" . }}-watch
   apiGroup: rbac.authorization.k8s.io
