--- a/gaffer-controller/deploy/helm/templates/worker/worker-role.yaml
+++ b/gaffer-controller/deploy/helm/templates/worker/worker-role.yaml
@@ -13,10 +13,10 @@
 # limitations under the License.
 
 apiVersion: rbac.authorization.k8s.io/v1
-{{ if eq (index .Values.controller.applicationProperties "controller.scope") "NAMESPACE" }}
-kind: Role
-{{ else }}
+{{ if (index .Values.controller.applicationProperties "controller.scope.cluster") }}
 kind: ClusterRole
+{{ else }}
+kind: Role
 {{- end }}
 metadata:
   name: {{ template "gaffer-controller.fullname" . }}-worker
@@ -83,10 +83,10 @@ rules:
 
 --- 
 apiVersion: rbac.authorization.k8s.io/v1
-{{ if eq (index .Values.controller.applicationProperties "controller.scope") "NAMESPACE" }}
-kind: RoleBinding
-{{ else }}
+{{ if (index .Values.controller.applicationProperties "controller.scope.cluster") }}
 kind: ClusterRoleBinding
+{{ else }}
+kind: RoleBinding
 {{- end }}
 metadata:
   name: {{ template "gaffer-controller.fullname" . }}-worker
@@ -97,10 +97,10 @@ subjects:
     name: {{ .Values.worker.serviceAccount.name }}
     namespace: {{ .Release.Namespace }}
 roleRef:
-{{ if eq (index .Values.controller.applicationProperties "controller.scope") "NAMESPACE" }}
-  kind: Role
-{{ else }}
+  {{ if (index .Values.controller.applicationProperties "controller.scope.cluster") }}
   kind: ClusterRole
-{{- end }}
+  {{ else }}
+  kind: Role
+  {{- end }}
   name: {{ template "gaffer-controller.fullname" . }}-worker
   apiGroup: rbac.authorization.k8s.io
