--- a/gaffer-controller/src/main/resources/application.properties
+++ b/gaffer-controller/src/main/resources/application.properties
@@ -15,7 +15,7 @@
 #
 
 worker.namespace=gaffer-workers
-worker.helm.image=dtzar/helm-kubectl:latest
+worker.helm.image=dtzar/helm-kubectl:3.4.2
 worker.helm.repo=https://gchq.github.io/gaffer-docker
 worker.service.account=gaffer-worker
 worker.restart.policy=Never
