gh-26 Ready for testing

--- a/gaffer-controller/deploy/helm/values.yaml
+++ b/gaffer-controller/deploy/helm/values.yaml
@@ -15,6 +15,7 @@
 controller:
   applicationProperties:
     controller.scope.cluster: false
+    worker.helm.image: d47853/gaffer-worker:latest
   serviceAccount:
     create: true
     name: gaffer-controller
