Parameterised ImagePullPolicy for worker

--- a/gaffer-controller/deploy/helm/values.yaml
+++ b/gaffer-controller/deploy/helm/values.yaml
@@ -15,7 +15,8 @@
 controller:
   applicationProperties:
     controller.scope.cluster: false
-    worker.helm.image: d47853/gaffer-worker:latest
+    worker.image: d47853/gaffer-worker:latest
+    worker.imagePullPolicy: Always
   serviceAccount:
     create: true
     name: gaffer-controller
