--- a/rest-api/pom.xml
+++ b/rest-api/pom.xml
@@ -16,18 +16,18 @@
 	<properties>
 		<java.version>8</java.version>
 		<kubernetes.version>11.0.0</kubernetes.version>
-		<!-- Testing versions -->
-		<junit.version>5.7.0</junit.version>
+<!--		&lt;!&ndash; Testing versions &ndash;&gt;-->
+<!--		<junit.version>5.7.0</junit.version>-->
 		<!-- Maven versions -->
 		<compiler.plugin.version>2.3.2</compiler.plugin.version>
 		<surefire.version>3.0.0-M5</surefire.version>
 	</properties>
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.boot</groupId>-->
+<!--			<artifactId>spring-boot-starter-test</artifactId>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -59,6 +59,13 @@
 			<artifactId>jjwt</artifactId>
 			<version>0.9.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>findbugs-maven-plugin</artifactId>
+			<version>3.0.1</version>
+			<type>maven-plugin</type>
+		</dependency>
 <!--		<dependency>-->
 <!--			<groupId>javax.xml.bind</groupId>-->
 <!--			<artifactId>jaxb-api</artifactId>-->
@@ -80,12 +87,12 @@
 <!--			<artifactId>jackson-dataformat-yaml</artifactId>-->
 <!--			<version>2.11.2</version>-->
 <!--		</dependency>-->
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter-api</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.junit.jupiter</groupId>-->
+<!--			<artifactId>junit-jupiter-api</artifactId>-->
+<!--			<version>${junit.version}</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
     </dependencies>
 
 	<dependencyManagement>
@@ -131,11 +138,6 @@
 					<source>8</source>
 					<target>8</target>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${surefire.version}</version>
 			</plugin>
 		</plugins>
 
