--- a/rest-api/pom.xml
+++ b/rest-api/pom.xml
@@ -116,6 +116,21 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+				<groupId>io.kubernetes</groupId>
+				<artifactId>client-java</artifactId>
+				<version>${kubernetes.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.kubernetes</groupId>
+				<artifactId>client-java-extended</artifactId>
+				<version>${kubernetes.version}</version>
+			</dependency>
+    		<dependency>	
+				<groupId>io.kubernetes</groupId>
+				<artifactId>client-java-spring-integration</artifactId>
+				<version>${kubernetes.version}</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
