--- a/gaffer-worker/pom.xml
+++ b/gaffer-worker/pom.xml
@@ -50,21 +50,19 @@
     </dependency>
 
     <dependency>
-      <groupId>io.fabric8</groupId>
-      <artifactId>kubernetes-model</artifactId>
-      <version>5.0.1</version>
+      <groupId>io.kubernetes</groupId>
+      <artifactId>client-java</artifactId>
+      <version>11.0.0</version>
     </dependency>
-
     <dependency>
-      <groupId>io.fabric8</groupId>
-      <artifactId>openshift-client</artifactId>
-      <version>5.0.1</version>
+      <groupId>io.kubernetes</groupId>
+      <artifactId>client-java-extended</artifactId>
+      <version>11.0.0</version>
     </dependency>
-
     <dependency>
-      <groupId>io.fabric8</groupId>
-      <artifactId>kubernetes-client</artifactId>
-      <version>5.0.1</version>
+      <groupId>io.kubernetes</groupId>
+      <artifactId>client-java-spring-integration</artifactId>
+      <version>11.0.0</version>
     </dependency>
 
     <dependency>
