--- a/gaffer-worker/pom.xml
+++ b/gaffer-worker/pom.xml
@@ -85,6 +85,10 @@
       <artifactId>jackson-dataformat-yaml</artifactId>
       <version>2.11.2</version>
     </dependency>
+      <dependency>
+          <groupId>javax.validation</groupId>
+          <artifactId>validation-api</artifactId>
+      </dependency>
 
   </dependencies>
 
