--- a/gaffer-worker/pom.xml
+++ b/gaffer-worker/pom.xml
@@ -85,11 +85,11 @@
       <artifactId>jackson-dataformat-yaml</artifactId>
       <version>2.11.2</version>
     </dependency>
-      <dependency>
-          <groupId>javax.validation</groupId>
-          <artifactId>validation-api</artifactId>
-      </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
   </dependencies>
 
 
