--- a/gaffer-worker/pom.xml
+++ b/gaffer-worker/pom.xml
@@ -100,7 +100,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
         <configuration>
-          <mainClass>uk.gov.gchq.gaffer.SpringbootTestApplication</mainClass>
+          <mainClass>uk.gov.gchq.gaffer.GafferWorker</mainClass>
           <layout>ZIP</layout>
           <executable>true</executable>
           <classifier>exec</classifier>
