--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
         <module>graffer-ql</module>
         <module>operation-runner</module>
         <module>gaffer-controller</module>
-        <module>gaffer-worker</module>
+        <module>gaas-rest</module>
     </modules>
 
     <properties>
