--- a/gaas-rest/pom.xml
+++ b/gaas-rest/pom.xml
@@ -30,6 +30,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>uk.gov.gchq.gaffer</groupId>
+      <artifactId>graph</artifactId>
+      <version>${gaffer.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
