--- a/gaas-rest/pom.xml
+++ b/gaas-rest/pom.xml
@@ -116,7 +116,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>uk.gov.gchq.gaffer.SpringbootTestApplication</mainClass>
+                    <mainClass>uk.gov.gchq.gaffer.gaas.GaaSWebApplication</mainClass>
                     <layout>ZIP</layout>
                     <executable>true</executable>
                     <classifier>exec</classifier>
@@ -136,20 +136,20 @@
                 <version>2.22.2</version>
             </plugin>
 
-            <!--            <plugin>-->
-            <!--                <groupId>org.eclipse.jkube</groupId>-->
-            <!--                <artifactId>openshift-maven-plugin</artifactId>-->
-            <!--                <version>1.1.0</version>-->
-            <!--                <executions>-->
-            <!--                    <execution>-->
-            <!--                        <goals>-->
-            <!--                            <goal>resource</goal>-->
-            <!--                            <goal>build</goal>-->
-            <!--                            <goal>apply</goal>-->
-            <!--                        </goals>-->
-            <!--                    </execution>-->
-            <!--                </executions>-->
-            <!--            </plugin>-->
+            <plugin>
+                <groupId>org.eclipse.jkube</groupId>
+                <artifactId>openshift-maven-plugin</artifactId>
+                <version>1.1.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>resource</goal>
+                            <goal>build</goal>
+                            <goal>apply</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
