--- a/gaas-rest/pom.xml
+++ b/gaas-rest/pom.xml
@@ -136,20 +136,20 @@
                 <version>2.22.2</version>
             </plugin>
 
-<!--            <plugin>-->
-<!--                <groupId>org.eclipse.jkube</groupId>-->
-<!--                <artifactId>openshift-maven-plugin</artifactId>-->
-<!--                <version>1.1.0</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <goals>-->
-<!--                            <goal>resource</goal>-->
-<!--                            <goal>build</goal>-->
-<!--                            <goal>apply</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.eclipse.jkube</groupId>
+                <artifactId>openshift-maven-plugin</artifactId>
+                <version>1.1.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>resource</goal>
+                            <goal>build</goal>
+                            <goal>apply</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
