--- a/gaas-rest/pom.xml
+++ b/gaas-rest/pom.xml
@@ -112,7 +112,7 @@
     </dependencies>
     <profiles>
         <profile>
-            <id>build-test</id>
+            <id>test</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
