Addressed pull request comments

--- a/gaas-rest/src/main/resources/application.properties
+++ b/gaas-rest/src/main/resources/application.properties
@@ -17,4 +17,8 @@
 jwt.secret=javainuse
 group=gchq.gov.uk
 version=v1
+kind=Gaffer
 namespace=kai-helm-3
+admin.username=javainuse
+admin.password=$2a$10$slYQmyNdGzTn7ZLBXBChFOC9f6kFjAqPhccnP6DxlWXx2lPk1C3G6
+
