--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,3 +16,22 @@ jobs:
     - name: Run build
       run: mvn clean install
 
+  run_ui_tests:
+    runs-on:
+    defaults:
+      run:
+        working-directory: ./gaas-ui
+
+    steps:
+    - uses: actions/setup-node@v1
+
+    - name: Set up Node
+      uses: actions/setup-java@v1
+      with:
+        node-version: 14.16.0
+
+    - name: Install dependencies
+      run: npm run install
+
+    - name: Run tests
+      run: npm run test
