--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,9 +18,9 @@ jobs:
 
   run_ui_tests:
     runs-on: ubuntu-latest
-#    defaults:
-#      run:
-#        working-directory: ./gaas-ui
+    defaults:
+      run:
+        working-directory: gaas-ui/
 
     steps:
     - name: Check out repository
@@ -32,11 +32,9 @@ jobs:
         node-version: 14.16.0
 
     - name: Install dependencies
-      run: |
-        cd gaas-ui/
+      run:
         npm install
 
     - name: Run tests
-      run: |
-        cd gaas-ui/
+      run:
         npm run test
