--- a/gaas-ui/deploy/helm/templates/configmap.yaml
+++ b/gaas-ui/deploy/helm/templates/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-    name: {{ include "helmchart.fullname" . }}
+    name: {{ include "helm.fullname" . }}
 data:
     web.properties: |
         window.REACT_APP_API_PLATFORM= "{{.Values.envVariables.reactAPIPlatform}}"
