--- a/gaas-ui/deploy/helm/templates/deployment.yaml
+++ b/gaas-ui/deploy/helm/templates/deployment.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "helmchart.fullname" . }}
+  name: {{ include "helm.fullname" . }}
   labels:
-    {{- include "helmchart.labels" . | nindent 4 }}
+    {{- include "helm.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
     matchLabels:
-      {{- include "helmchart.selectorLabels" . | nindent 6 }}
+      {{- include "helm.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       labels:
-        {{- include "helmchart.selectorLabels" . | nindent 8 }}
+        {{- include "helm.selectorLabels" . | nindent 8 }}
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
     spec:
@@ -43,7 +43,7 @@ spec:
       volumes:
         - name: env-js-config
           configMap:
-            name: {{ include "helmchart.fullname" . }}
+            name: {{ include "helm.fullname" . }}
             items:
             - key: "web.properties"
               path: {{ .Values.envConfigFile }}
