--- a/gaas-ui/package.json
+++ b/gaas-ui/package.json
@@ -43,7 +43,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-testing-library": "latest",
-    "react-toastify": "^6.1.0"
+    "react-toastify": "^6.1.0",
+    "statuses": "^2.0.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.12.7",
