Added cluster-namespaces component and unit test

--- a/gaas-ui/.env.example
+++ b/gaas-ui/.env.example
@@ -1,5 +1,5 @@
-REACT_APP_API_PLATFORM=AWS
-REACT_APP_KAI_REST_API_HOST=http://some-aws-service:4000
+REACT_APP_API_PLATFORM=OPENSHIFT
+REACT_APP_KAI_REST_API_HOST=http://localhost:4000
 REACT_APP_COGNITO_USERPOOLID=us-east-1_ABC1def2g
 REACT_APP_COGNITO_CLIENTID=s0m3AwSiD
 REACT_APP_AUTH_ENDPOINT=http://localhost:4000
