--- a/gaas-ui/.eslintrc.json
+++ b/gaas-ui/.eslintrc.json
@@ -18,6 +18,7 @@
   "plugins": [
     "react",
     "@typescript-eslint",
+    "@typescript-eslint/eslint-plugin",
     "prettier",
     "notice"
   ],
