deployment.yaml sa

--- a/gaas-rest/deploy/helm/templates/deployment.yaml
+++ b/gaas-rest/deploy/helm/templates/deployment.yaml
@@ -28,7 +28,7 @@ spec:
       labels:
         {{- include "helm.selectorLabels" . | nindent 8 }}
     spec:
-      serviceAccountName: gaas-rest-account
+      serviceAccountName: {{ .Values.serviceAccountName }}
       containers:
         - name: gaas-rest
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
