parametrised gaas-rest-role service name

--- a/gaas-rest/deploy/helm/templates/gaas-rest-role.yaml
+++ b/gaas-rest/deploy/helm/templates/gaas-rest-role.yaml
@@ -37,7 +37,7 @@ metadata:
   name: gaas-rest
 subjects:
   - kind: ServiceAccount
-    name: gaas-rest-account
+    name: {{ .Values.serviceAccountName }}
     namespace: kai-helm-3
 roleRef:
   kind: ClusterRole
