--- a/gaas-rest/deploy/helm/templates/service-account.yaml
+++ b/gaas-rest/deploy/helm/templates/service-account.yaml
@@ -12,7 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+{{ if .Values.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ .Values.serviceAccountName }}
+  name: {{ include "helm.fullname" . }}-service-account
+{{ end }}
