Comments on how serviceAccount.create works in helm values

--- a/gaas-rest/deploy/helm/values.yaml
+++ b/gaas-rest/deploy/helm/values.yaml
@@ -23,5 +23,8 @@ service:
   type: ClusterIP
   port: 8080
   targetPort: 8080
+
+# Set serviceAccount.create to true if User deploying has assign
+# ClusterRoleBinding privileges to enable cluster namespaces endpoint
 serviceAccount:
   create: false
